[tool.poetry]
name = "Krypton"
version = "1.0.0"
description = "A discord  bot with advanced moderation and security features."
authors = ["Sagexdd divinegameryuvraj@gmail.com"]
license = " MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Quart = "^0.19.4"
discord-py = "^2.3.2"
discord-ui = "^6.1.1"
jishaku = "^2.5.2"
asyncio = "^3.4.3"
aiohttp = "^3.9.3"
datetime = "^5.5"
flask = "^3.0.2"
typing = "^3.10.0.0"
psutil = "^5.9.8"
collection = "^0.1.6"
pathlib = "^1.0.1"
pymongo = "^4.6.1"
wavelink = "^1.4.2"
httpx = "^0.27.0"
discord-ext-context = "^0.2.3"
tasksio = "^1.2.0"
motor = "^3.3.2"
Augmentor = "^0.2.10"
numpy = "^1.26.4"
aiosqlite = "^0.19.0"
gtts = "^2.5.0"
langdetect = "^1.0.9"
python-dotenv = "^1.0.1"
pyttsx3 = "^2.90"
PyYAML = "^6.0.1"
requests = "^2.31.0"
openai = "^1.14.1"
duckduckgo-search = "6.3.6"
pillow = "11.0.0"
colorama = "^0.4.6"
chess = "^1.9.4"
python-dateutil = "^2.8.2"
topggpy = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
